# HireLens

./: .gitignore  CHANGELOG.md  README.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  config.py  logging_config.py  pipeline_registry.py
backend/app/data/: seed_skills.txt
backend/app/db/: session.py
backend/app/schemas/: common.py  feedback.py  parsing.py  pipeline.py  privacy.py  ranking.py  scoring.py
backend/config/weights/: v3_hybrid.json
backend/scripts/: build_faiss_skill_index.py  build_tfidf_corpus.py  demonstrate_semantic_matching.py  ingest_esco_taxonomy.py  prepare_ground_truth.py  reconcile_ground_truth.py
backend/tests/: conftest.py  test_anonymizer.py  test_api_skeleton.py  test_auth_isolation.py  test_feedback_endpoint.py  test_guardrails.py  test_health.py  test_metrics_endpoint.py  test_parse_endpoint.py  test_phase7_integration.py  test_pipeline_registry.py  test_rank_async.py  test_rank_endpoint.py  test_rate_limiter.py  test_score_endpoint.py
backend/tests/integration/: generate_parser_report.py  test_parser_pipeline_e2e.py
backend/tests/services/: test_ablation_study.py  test_agent_orchestrator.py  test_ambiguity_rules.py  test_bias_name_swap.py  test_education_matcher.py  test_embedding_cache.py  test_embedding_scorer.py  test_evaluation_harness.py  test_faiss_index_builder.py  test_feature_engineering.py  test_feature_importance.py  test_grid_search_tuning.py  test_ground_truth.py  test_hybrid_scorer.py  test_kfold_stability.py  (+9 more)
(+108 files in other folders)
